--- a/assets/scss/modules/listing/row/_container.scss
+++ b/assets/scss/modules/listing/row/_container.scss
@@ -3,10 +3,10 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  z-index: 1000;
+  z-index: $big-z-index;
 
   &:hover {
-    z-index: 1001;
+    z-index: $big-z-index + 1;
   }
 
   &.sortable-ghost {
